--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,16 @@ div,
 a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
+}
